[tool.poetry]
name = "education-website"
version = "0.1.0"
description = "Educational platform and constructor"
authors = ["Gomzikov Evgenii"]
readme = "README.md"
packages = [{include = "education_website"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
